--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+#items{
+	width:80px;
+	height:80px;
+	background-color:green;
+}
